--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ DB_USER=root
 
 # This is the password to login to the database
 # (THIS IS DISPLAYED AS TEXT HERE SO REMEMBER TO SECURE THIS FILE)
-DB_PASSWORD=
+DB_PASSWORD=dragonballsuper
 
 # The name of the database
 DB_NAME=laundry_database
